Bug 434569 - Switching from grouped layer to the group while drawing a polyline crashes Krita
Summary: Switching from grouped layer to the group while drawing a polyline crashes Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.4.2
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-18 04:19 UTC by F035
Modified: 2021-04-12 13:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description F035 2021-03-18 04:19:12 UTC
STEPS TO REPRODUCE
1. start drawing a line with the polyline tool, in a paint layer that's within a group
2. without finishing the line, use a shortcut like page up to switch to the group itself
3. click after switching to the group and while in it, wait a few seconds, krita crashes.

OBSERVED RESULT
A crash.

EXPECTED RESULT
I stumbled onto this by accident, but by judging by its behaviour when you shortcut to another layer, I'd expect the line to complete itself as usual, altough since you can't draw in a group container krita has no idea what to do.

SOFTWARE/OS VERSIONS
Windows: 10

ADDITIONAL INFORMATION
Info from the bug window:

Krita

 Version: 4.4.2
 Languages: en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, pt_BR, pt, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.18363
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (Intel(R) HD Graphics Family Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options
Windows 6.2.9200
DrMingw 0.8.2
Comment 1 tomtomtomreportingin 2021-03-18 12:00:36 UTC
I can reproduce this in 4.4.3beta2. It happens with both the polyline tool and the polygon tool. It doesn't happen with the corresponding selection tools. Using a shortcut isn't necessary as clicking on the group layer also produces a crash. Doesn't seem to be a regression.
Comment 2 Bug Janitor Service 2021-04-12 13:09:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/802
Comment 3 sh_zam 2021-04-12 13:22:24 UTC
Git commit 078fa50a3749cffc9a7ecec9cdd371bea11b1da0 by Sharaf Zaman.
Committed on 12/04/2021 at 13:03.
Pushed by rempt into branch 'master'.

Bugfix: Crash when switching to an unpaintable layer with polyline tool

M  +7    -0    libs/ui/tool/kis_tool_polyline_base.cpp

https://invent.kde.org/graphics/krita/commit/078fa50a3749cffc9a7ecec9cdd371bea11b1da0