Bugfix: Crash when switching to an unpaintable layer with polyline tool

BUG:434569